# trendlab-tui.1

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  DISCREPANCY_REPORT.md  M10-path-monte-carlo-specification.md  M11-bootstrap-regime-resampling-specification.md  M12-benchmarks-ui-polish-specification.md  M9-execution-monte-carlo-specification.md  README.md  ROADMAP_REALIGNMENT.md  new-feedback-1.md  new-feedback-2.md  new-feedback-3.md  rustfmt.toml  trendlab-technical-writeup.md  trendlab-v3-development-roadmap-bdd-v2(1).md  trendlab-v3-development-roadmap-bdd-v2.md  trendlab-v3-rebuild-plan.md  trendlab-v4-new-build-plan.md
.claude/: README-claude-agents.md  settings.json  settings.local.json
.claude/agents/: _INDEX.md  aesthetic-designer.md  data-hygiene.md  (+11 more)
archive/: M12_COMPLETION_SUMMARY.md  M6-position-management-specification.md  M7-composition-normalization-specification.md  M8-walkforward-oos-specification.md  feedback.md  feedback2.md
config/: universe.toml
docs/: architecture-invariants.md  architecture.md  config-reference.md  extension-guide.md  quickstart.md
trendlab-cli/: Cargo.toml
trendlab-cli/src/: main.rs
trendlab-core/: Cargo.toml
trendlab-core/benches/: engine_bench.rs
trendlab-core/src/: fingerprint.rs  lib.rs  rng.rs  schema.rs  smoke.rs
trendlab-core/src/components/: composition.rs  execution.rs  factory.rs  filter.rs  indicator.rs  mod.rs  pm.rs  sampler.rs  signal.rs
trendlab-core/src/components/execution/: close_on_signal.rs  limit_entry.rs  mod.rs  next_bar_open.rs  stop_entry.rs
trendlab-core/src/components/filter/: adx_filter.rs  ma_regime.rs  mod.rs  volatility.rs
trendlab-core/src/components/pm/: atr_trailing.rs  breakeven_then_trail.rs  chandelier.rs  fixed_stop_loss.rs  frozen_reference.rs  max_holding_period.rs  mod.rs  percent_trailing.rs  since_entry_trailing.rs  time_decay.rs
trendlab-core/src/components/signal/: aroon.rs  bollinger.rs  breakout_52w.rs  donchian.rs  keltner.rs  ma_crossover.rs  mod.rs  parabolic_sar.rs  roc_momentum.rs  supertrend.rs  tsmom.rs
trendlab-core/src/composer/: manifest.rs  mod.rs
trendlab-core/src/data/: align.rs  cache.rs  canonicalize.rs  circuit_breaker.rs  download.rs  ingest.rs  mod.rs  provider.rs  schema.rs  universe.rs  yahoo.rs
trendlab-core/src/domain/: bar.rs  fill.rs  ids.rs  instrument.rs  mod.rs  order.rs  portfolio.rs  position.rs  trade.rs
trendlab-core/src/engine/: accounting.rs  convert.rs  event_loop.rs  loop_runner.rs  mod.rs  order_book.rs  portfolio_update.rs  precompute.rs  smoke.rs  state.rs  stickiness.rs  trade_extraction.rs  warmup.rs
trendlab-core/src/engine/execution/: cost_model.rs  fill_price.rs  liquidity.rs  mod.rs  path_policy.rs  trigger.rs
trendlab-core/src/execution/: fill_engine.rs  gap_handler.rs  liquidity.rs  mod.rs  path_policy.rs  preset.rs  priority.rs  slippage.rs
trendlab-core/src/indicators/: adx.rs  aroon.rs  atr.rs  bollinger.rs  donchian.rs  ema.rs  keltner.rs  mod.rs  momentum.rs  parabolic_sar.rs  roc.rs  rsi.rs  sma.rs  supertrend.rs
trendlab-core/src/order_policy/: guards.rs  immediate.rs  mod.rs  natural.rs
trendlab-core/src/orders/: bracket.rs  mod.rs  order.rs  order_book.rs  order_policy.rs  order_type.rs
trendlab-core/src/position_management/: intent.rs  manager.rs  mod.rs  ratchet.rs
trendlab-core/src/position_management/strategies/: atr_stop.rs  chandelier.rs  fixed_percent.rs  mod.rs  time_stop.rs
trendlab-core/src/signals/: intent.rs  mod.rs
trendlab-core/src/signals/examples/: donchian.rs  ma_cross.rs  mod.rs
trendlab-core/src/sizers/: atr_risk.rs  fixed.rs  mod.rs
trendlab-core/tests/: composition_test.rs  data_integration.rs  e2e_spy_backtest.rs  engine_test.rs  execution_test.rs  lookahead_test.rs  pm_test.rs  property_tests.rs  signal_test.rs  smoke_backtest.rs  strategy_composition.rs
trendlab-core/tests/fixtures/: sample.csv  sample_duplicates.csv  sample_invalid.csv  spy_2024.parquet
trendlab-runner/: Cargo.toml
trendlab-runner/benches/: robustness_benchmarks.rs
trendlab-runner/src/: bootstrap.rs  cache.rs  config.rs  cross_leaderboard.rs  data_loader.rs  execution_mc.rs  export.rs  fdr.rs  fitness.rs  history.rs  leaderboard.rs  lib.rs  metrics.rs  profiling.rs  promotion.rs  result.rs  risk_profile.rs  runner.rs  sweep.rs  tail_metrics.rs  walk_forward.rs  yolo.rs
trendlab-runner/src/reporting/: export.rs  mod.rs
trendlab-runner/src/reporting/artifacts/: diagnostics.rs  equity.rs  manifest.rs  mod.rs  trades.rs
trendlab-runner/src/reporting/reports/: markdown.rs  mod.rs  summary.rs
trendlab-runner/src/robustness/: ladder.rs  mod.rs  promotion.rs
trendlab-runner/src/robustness/levels/: bootstrap.rs  cheap_pass.rs  execution_mc.rs  mod.rs  path_mc.rs  walk_forward.rs
trendlab-runner/src/robustness/stability/: distributions.rs  mod.rs  scoring.rs
trendlab-runner/tests/: backtest_runner.rs  cross_leaderboard.rs  data_pipeline.rs  golden_spy.rs  hard_fail.rs  regression_golden.rs  reporting_artifacts.rs  robustness.rs  robustness_bdd.rs  robustness_integration.rs  runner_bdd.rs  yolo.rs
trendlab-runner/tests/features/: bootstrap.feature  ladder_integration.feature  path_mc.feature  promotion_gating.feature  stability.feature
trendlab-tui/: Cargo.toml
trendlab-tui/src/: app.rs  backtest_service.rs  data_loader.rs  input.rs  lib.rs  main.rs  navigation.rs  persistence.rs  sample_data.rs  test_helpers.rs  theme.rs  worker.rs
trendlab-tui/src/drill_down/: diagnostics.rs  flow.rs  mod.rs  summary_card.rs
trendlab-tui/src/ghost_curve/: drag_metric.rs  ideal_equity.rs  mod.rs  real_equity.rs
trendlab-tui/src/panels/: candle_chart.rs  chart.rs  distribution_chart.rs  execution_lab.rs  leaderboard.rs  mod.rs  rejected_intents.rs  robustness.rs  run_manifest.rs  sensitivity.rs  trade_tape.rs
trendlab-tui/src/ui/: chart_panel.rs  data_panel.rs  help_panel.rs  mod.rs  overlays.rs  results_panel.rs  status_bar.rs  strategy_panel.rs  sweep_panel.rs
trendlab-tui/src/ui/widgets/: mod.rs  slider.rs  tree.rs
trendlab-tui/tests/: hard_fail_death_crossing.rs
(+19 files in other folders)
