[workspace]
members = [
    "trendlab-core",
    "trendlab-runner",
    "trendlab-tui",
    "trendlab-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TrendLab Contributors"]
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
polars = { version = "0.44", features = ["lazy", "parquet"] }
ratatui = "0.28"
crossterm = "0.28"
blake3 = "1.5"  # Stable deterministic hashing for RunId/DatasetHash
