[workspace]
resolver = "2"
members = [
    "trendlab-core",
    "trendlab-runner",
    "trendlab-tui",
    "trendlab-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
blake3 = "1"

# RNG
rand = "0.8"

# Testing
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
