[package]
name = "trendlab-cli"
description = "CLI: download and run commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trendlab-core = { path = "../trendlab-core" }
trendlab-runner = { path = "../trendlab-runner" }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
