[package]
name = "trendlab-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
polars.workspace = true
anyhow.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.0"
insta = "1.34"
cucumber = "0.21"
