[package]
name = "trendlab-core"
description = "Engine: domain types, event loop, orders, execution, position management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
