[package]
name = "trendlab-runner"
version.workspace = true
edition.workspace = true

[dependencies]
trendlab-core = { path = "../trendlab-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
polars.workspace = true
blake3.workspace = true
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "robustness_benchmarks"
harness = false
