[package]
name = "trendlab-runner"
description = "Backtest orchestration, YOLO mode, leaderboards, metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trendlab-core = { path = "../trendlab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
