[package]
name = "trendlab-runner"
description = "Backtest orchestration, YOLO mode, leaderboards, metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trendlab-core = { path = "../trendlab-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
