[package]
name = "trendlab-tui"
description = "Ratatui six-panel terminal UI with vim-style navigation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
trendlab-core = { path = "../trendlab-core" }
trendlab-runner = { path = "../trendlab-runner" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"

[dev-dependencies]
proptest = { workspace = true }
